# barnes-hut

./: .gitignore  BHGraphics.cpp  BHGraphics.h  BHTree.cpp  BHTree.h  BMplain_font.h  Body.cpp  Body.h  CMakeCache.txt  CMakeLists.txt  Quad.cpp  Quad.h  Simulation.cpp  Simulation.h  TestManager.cpp  TestManager.h  barnesHut.out  main.cpp
tests/: basic.in  circle.js  collide.in  flat.in  flatDistMass.in  flush.js  luna.in  microwavebackground.in  noise.in  noiseGen.js  noiseLessRandom.in  pointBoom.in  randomScatter.in  randomScatterVelocity.in  stray.in  t01.in  t02.in  t03.in  t06.js
